--- a/CodeWord/static/css/theme.css
+++ b/CodeWord/static/css/theme.css
@@ -10,9 +10,9 @@ header {
   align-items: center;
   justify-content: center;
   flex-wrap: nowrap;
-  height: 100px;
+  height: 50px;
   color: White;
-  padding: 0px 16px;
+  padding: 0px 15px;
   border-bottom: 1px solid White;
 }
 
@@ -29,9 +29,8 @@ header {
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  padding: 10px;
+  padding: 15px;
   overflow: hidden;
-  border-bottom: 1px solid White;
 }
 
 #number_grid {
@@ -62,4 +61,43 @@ header {
   background-color: Black;
   border: 1px solid White;
   padding: 5px;
+  color: White;
+  text-align: center;
+}
+
+#keyboard_area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  padding: 15px;
+  overflow: hidden;
+}
+
+#keyboard {
+  width: 550px;
+  height: 200px;
+}
+
+.btn-group button {
+  width: 55px;
+  height: 50px;
+  background-color: Gray;
+  border: 1px solid White;
+  color: White;
+  padding: 5px;
+  cursor: pointer;
+  float: left;
+}
+
+/* Clear floats */
+.btn-group:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Background color on hover */
+.btn-group button:hover {
+  background-color: DarkGray;
 }
