--- a/CodeWord/templates/index.html
+++ b/CodeWord/templates/index.html
@@ -5,9 +5,10 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/theme.css') }}">
     {% block css %}{% endblock %}
     <!-- JavaScript -->
-    <script type=test/jsx">
+    <script type=text/javascript">
         $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
     </script>
+    <script type=text/javascript src="{{ url_for('static', filename='js/test.js') }}"></script>
     {% block scripts %}{% endblock %}
   </head>
   <body>
@@ -19,42 +20,91 @@
     <div id="game_board">
       <!-- Div for rows of numbers. -->
       <div id="number_grid">
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
+        <div class="element" id="numIdx00"></div>
+        <div class="element" id="numIdx01"></div>
+        <div class="element" id="numIdx02"></div>
+        <div class="element" id="numIdx03"></div>
+        <div class="element" id="numIdx10"></div>
+        <div class="element" id="numIdx11"></div>
+        <div class="element" id="numIdx12"></div>
+        <div class="element" id="numIdx13"></div>
+        <div class="element" id="numIdx20"></div>
+        <div class="element" id="numIdx21"></div>
+        <div class="element" id="numIdx22"></div>
+        <div class="element" id="numIdx23"></div>
+        <div class="element" id="numIdx30"></div>
+        <div class="element" id="numIdx31"></div>
+        <div class="element" id="numIdx32"></div>
+        <div class="element" id="numIdx33"></div>
+        <div class="element" id="numIdx40"></div>
+        <div class="element" id="numIdx41"></div>
+        <div class="element" id="numIdx42"></div>
+        <div class="element" id="numIdx43"></div>
+        <div class="element" id="numIdx50"></div>
+        <div class="element" id="numIdx51"></div>
+        <div class="element" id="numIdx52"></div>
+        <div class="element" id="numIdx53"></div>
       </div>
       <!-- Div for answer row. -->
       <div id="answer_grid">
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
-        <div class="element"></div>
+        <div class="element" id="ansIdx0"></div>
+        <div class="element" id="ansIdx1"></div>
+        <div class="element" id="ansIdx2"></div>
+        <div class="element" id="ansIdx3"></div>
       </div>
     <!-- Div for keyboard. -->
     </div>
-    <div id="keyboard">
-      <!-- TODO: keyboard -->
+    <div id="keyboard_area">
+      <div id="keyboard">
+        <div class="btn-group">
+          <button id="button1" onclick="buttonFunc(this.id)">1</button>
+          <button id="button2" onclick="buttonFunc(this.id)">2</button>
+          <button id="button3" onclick="buttonFunc(this.id)">3</button>
+          <button id="button4" onclick="buttonFunc(this.id)">4</button>
+          <button id="button5" onclick="buttonFunc(this.id)">5</button>
+          <button id="button6" onclick="buttonFunc(this.id)">6</button>
+          <button id="button7" onclick="buttonFunc(this.id)">7</button>
+          <button id="button8" onclick="buttonFunc(this.id)">8</button>
+          <button id="button9" onclick="buttonFunc(this.id)">9</button>
+          <button id="button0" onclick="buttonFunc(this.id)">0</button>
+        </div>
+        <div class="btn-group">
+          <button id="buttonQ" onclick="buttonFunc(this.id)">Q</button>
+          <button id="buttonW" onclick="buttonFunc(this.id)">W</button>
+          <button id="buttonE" onclick="buttonFunc(this.id)">E</button>
+          <button id="buttonR" onclick="buttonFunc(this.id)">R</button>
+          <button id="buttonT" onclick="buttonFunc(this.id)">T</button>
+          <button id="buttonY" onclick="buttonFunc(this.id)">Y</button>
+          <button id="buttonU" onclick="buttonFunc(this.id)">U</button>
+          <button id="buttonI" onclick="buttonFunc(this.id)">I</button>
+          <button id="buttonO" onclick="buttonFunc(this.id)">O</button>
+          <button id="buttonP" onclick="buttonFunc(this.id)">P</button>
+        </div>
+        <div class="btn-group">
+          <button id="buttonA" onclick="buttonFunc(this.id)">A</button>
+          <button id="buttonS" onclick="buttonFunc(this.id)">S</button>
+          <button id="buttonD" onclick="buttonFunc(this.id)">D</button>
+          <button id="buttonF" onclick="buttonFunc(this.id)">F</button>
+          <button id="buttonG" onclick="buttonFunc(this.id)">G</button>
+          <button id="buttonH" onclick="buttonFunc(this.id)">H</button>
+          <button id="buttonJ" onclick="buttonFunc(this.id)">J</button>
+          <button id="buttonK" onclick="buttonFunc(this.id)">K</button>
+          <button id="buttonL" onclick="buttonFunc(this.id)">L</button>
+          <button id="buttonBLANK" onclick="buttonFunc(this.id)"></button>
+        </div>
+        <div class="btn-group">
+          <button id="buttonENTER" onclick="buttonFunc(this.id)">ENTER</button>
+          <button id="buttonZ" onclick="buttonFunc(this.id)">Z</button>
+          <button id="buttonX" onclick="buttonFunc(this.id)">X</button>
+          <button id="buttonC" onclick="buttonFunc(this.id)">C</button>
+          <button id="buttonV" onclick="buttonFunc(this.id)">V</button>
+          <button id="buttonB" onclick="buttonFunc(this.id)">B</button>
+          <button id="buttonN" onclick="buttonFunc(this.id)">N</button>
+          <button id="buttonM" onclick="buttonFunc(this.id)">M</button>
+          <button id="buttonBLANK" onclick="buttonFunc(this.id)"></button>
+          <button id="buttonDEL" onclick="buttonFunc(this.id)">DEL</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
